# AAAClassWork

./: .gitignore  CMakeLists.txt  Chat_clienthandler.cpp  Chat_clienthandler.h  Chat_messagehandler.cpp  Chat_messagehandler.h  Chat_serverhandler.cpp  Chat_serverhandler.h  Commit.qml  DamuSystem.qml  DownloadSettings.qml  Img.qrc  Main.qml  MainPage.qml  Message_Page.qml  Mine.qml  Moments.qml  PersonInfo.qml  README.md  ToolBars.qml  Vedio.qml  VedioList.qml  VedioType.qml  abc.qrc  a站需求文档.odt  clienthandler.cpp  clientmessagehandler.h  comment.cpp  comment.h  config.ini  databaseuser.cpp  databaseuser.h  db.js  main.cpp  package-lock.json  package.json  total.vpp  upload.js  user.cpp  user.h  (+14 more)
Login/: LoginDialog.qml  LoginPage.qml
Send_videos/: Video.qml  VideoLode.qml  package-lock.json  package.json  server.js
Settings/: ShortcutKey.qml
Tools_Left/: Dynamic.qml  Message_Page.qml  PersonInfo.qml
Video_Playback/: NetworkManager.qml  Vedio.qml  VedioList.qml  Video.qml
bil/: CMakeLists.txt  Main.qml  Video.qml  VideoLode.qml  main.cpp  package-lock.json  package.json  read me.txt  server.js
component/: ModernLoadingIndicator.qml
controllers/: eventController.cpp  eventController.h  videodatabase.cpp  videodatabase.h  videomanager.cpp  videomanager.h
qml/: Commit.qml
qml/Login/: LoginPage.qml
qml/Send_Videos/: VideoLode.qml  VideolodeFunction.qml
qml/Settings/: CacheSettings.qml  PushSettings.qml
qml/Tools_Left/: Dynamic.qml  Message_Page.qml  My.qml  PersonInfo.qml
qml/User_HomePage/: User_HomePage.qml
qml/Video_Playback/: NetworkManager.qml  Video.qml
src/application/: userServerController.cpp  userServerController.h  videoServerContorller.cpp  videoServerContorller.h
src/component/: clienthandler.cpp  simpleuploader.cpp  simpleuploader.h  videouploader.cpp  videouploader.h
src/database/: userdatabase.cpp  userdatabase.h  videoDatabase.cpp  videoDatabase.h
src/domain/: comment.cpp  comment.h  commentVO.h  user.cpp  user.h  userVO.h  video.cpp  video.h  videoVO.h  videorepository.cpp  videorepository.h  videoserver.cpp  videoserver.h
src/presentation/: userController.cpp  userController.h  videoController.cpp  videoController.h  videoDTO.h
usr/share/applications/: A站.desktop
代贝妮/: .~lock.a站需求文档 (1).odt#  a站需求文档 (1).odt  up主 发布视频.vpp  up主 发布视频（协作图.vpp  up主 发布视频（顺序图.vpp  up主 管理视频.vpp  up主 管理视频（协作图.vpp  up主.vpp.bak_000f  up主关于用况输入输出.odt  up主协作图.odt  up主发布和管理视频简要描述.txt  up主发布和管理视频视频（用况.vpp  up主发布和管理视频视频（类图.vpp  up主发布和管理视频（协作图.vpp  up主发布视频（状态机图.vpp  up主发布视频（类图.vpp  up主发布视频（通信图.vpp  up主管理视频（状态机图.vpp  up主管理视频（类图.vpp  up主管理视频（通信图.vpp  up主管理视频（顺序图.vpp  文本文件.txt
何玉洁/: 4.2,4.3添加系统管理员协作图和类图描述.odt  6.3分析系统性能详细输入输出.odt  a站需求文档 (1).odt  sysadmin.vpp  sysadmin.vpp.bak_000f  分析系统性能用况.txt  完整类图.vpp  状态机图.vpp  类图.vpp.bak_000f  类图.vpp.vbak  系统管理员分析系统性能.vpp  系统管理员分析系统性能.vpp.bak_000f  系统管理员分析系统性能用况健壮性分析.odt  通信图.vpp  顺序图1.vpp  顺序图2.vpp
刘苏云/: .~lock.a站需求文档.odt#  a站需求文档.odt  beconme_official_user.txt  browse video.txt  class diagrame.vpp  class diagrame.vpp.bak_000f  class diagrame.vpp.bak_001d  class diagrame.vpp.bak_002d  class diagrame.vpp.bak_003d  class diagrame.vpp.bak_004d  class diagrame.vpp.bak_005d  shunxu.vpp  shunxu.vpp.bak_000f  shunxu.vpp.bak_001d  shunxu.vpp.bak_002d  shunxu.vpp.bak_003d  shunxu.vpp.bak_004d  shunxu.vpp.bak_005d  shunxu.vpp.bak_006d  tongxun.vpp  tongxun.vpp.bak_000f  tongxun.vpp.bak_001d  tongxun.vpp.bak_002d  xiezuo.vpp  xiezuo.vpp.bak_000f  xiezuo.vpp.bak_001d  youke.vpp  youke.vpp.bak_000f  youke.vpp.bak_001d  zhuangtai.vpp  zhuangtai.vpp.bak_000f  zhuangtai.vpp.bak_001d  zhuangtai.vpp.bak_002d  zhuangtai.vpp.bak_003d  游客协作图.txt  游客详细交互过程.txt  游客详细设计.txt
刘苏云/view/: UpUser_ViewDataAnalysis.vpp  view.vpp  viewDataAnalysis.txt
叶涵予/: a站需求文档 .odt  a站需求文档.odt  watcher.vpp  健壮性分析.txt  视频内容与互动者.txt
叶涵予/交互建模/: Comment_Detail.vpp  Comment_Detail.vpp.bak_000f  Comment_SD.vpp  Comment_SD.vpp.bak_000f  State_Video.vpp  VideoDes_Detail.vpp  VideoDescription_SD.vpp  VideoPlay_Detail.vpp  VideoPlay_SD.vpp  class_diagram.vpp  class_diagram.vpp.bak_001d  class_diagram.vpp.bak_002d  class_diagram.vpp.bak_003d  class_diagram.vpp.bak_004d  class_diagram.vpp.bak_005d  class_diagram.vpp.bak_006d  class_diagram.vpp.bak_007d  class_diagram.vpp.bak_008d  class_diagram.vpp.bak_009d
叶涵予/交互建模/顺序图/: Comment_SD.vpp  VideoDescription_SD.vpp  VideoPlay_SD.vpp
叶涵予/详细设计类图/: class_diagram.vpp  class_diagram.vpp.bak_000f
叶涵予/通讯图/: Comment.vpp  VideoDes.vpp  VideoPlay.vpp  untitled.vpp  untitled.vpp.vbak
叶涵予/通讯图/完整通讯图/: Comment_Detail.vpp  VideoDes_Detail.vpp  VideoPlay_Detail.vpp
吴华/: FrendCircle_communication_detail.vpp  FrendCircle_communication_detail.vpp.bak_000f  FrendCircle_communication_detail.vpp.vbak  FriendCircle_SD.vpp  Privatemessage_FrendCircle_communication.vpp  Privatemessage_SD.vpp  Privatemessage_communication_detail.vpp  a站需求文档 (正式用户）第四节.odt  class_diagram.vpp  class_diagram.vpp.bak_000f  class_diagram_need.vpp  class_diagram_need.vpp.bak_000f  jianzhuang.vpp  jianzhuang.vpp.bak_000f  stat_private_friendcircle.vpp.bak_000f  watcher.vpp.bak_000f  与其他正式用户交流.txt  与其他正式用户交流用况健壮性分析.txt
吴华/5.3.2应用逻辑层修改-6.3与其他正式用户交流用况—详细输入输出/: 5.3.2应用逻辑层修改-6.3详细输入输出.odt
宁志豪/: .~lock.系统管理员更新系统类转化.odt#  4.2 系统操作员系统更新用框的各种交互图.odt  5架构设计去掉的部分.odt  5架构部署.odt  6.2详细设计.odt  6.3更新系统用况.odt  6详细设计.odt  leitu.vpp  leitu.vpp.vbak  shixu.vpp  shixu.vpp.bak_000f  tongxin.vpp  zhuangtaiji.vpp  系统操作员更新系统用况.txt  系统管理员更新系统类转化.odt
客户端代码/client/: CMakeLists.txt  Main.qml  clienthandler.cpp  clienthandler.h  clientmessagehandler.cpp  clientmessagehandler.h  main.cpp
最终期中提交文件夹/: .~lock.a站需求文档.odt#  Usercase.vpp  a站需求文档.odt
服务端代码/server/: CMakeLists.txt  main.cpp  serverhandler.cpp  serverhandler.h
期末提交的文档/: .~lock.a站需求文档.odt#  a站需求文档.odt  total.vpp
第二次检查最终文件夹/: .~lock.a站需求文档.odt#  a站需求文档.odt
陈海洪/: 5.3~5.4 (1).odt  AuditorClass (1).vpp  AuditorClass (1).vpp.bak_000f  UserClass.vpp  auditor State Machine .vpp  sd管理正式用户.vpp  sd管理正式用户.vpp.vbak  审核员用况.vpp  审核员用况.vpp.bak_000f  审核员管理正式用户4.1到4.2.odt  审核员：管理正式用户健壮性分析.odt  管理正式用户用况详细描述.txt  管理正式用户顺序图.vpp
